# WorkDB

./: README.md  main.py  pyproject.toml
src/: db_manager.py  engine.py  hh.py
utl/: utils.py
